百度统计-ba_track_id

--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,8 @@ netease_comment: false
 
 # Analytics settings
 # Baidu Analytics 
-# ba_track_id: [your track id]
+ba_track_id: 904c8af54adb3b66427bfedd6a565253
+
 
 # Google Analytics
 #ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
