--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ future: true
 #weibo_username:     厌世狗
 zhihu_username:     ai-shang-yipi-ye-ma-i
 github_username:    yanshigou
+CSDN_username:      dogebug
 #twitter_username:   None
 #facebook_username:  None
 #linkedin_username:  firstname-lastname-idxxxx
