--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ netease_comment: false
 
 # Analytics settings
 # Baidu Analytics 
-ba_track_id: 904c8af54adb3b66427bfedd6a565253
+# ba_track_id: 904c8af54adb3b66427bfedd6a565253
 
 
 # Google Analytics
