--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ future: true
 zhihu_username:     yanshigou
 github_username:    yanshigou
 CSDN_username:      dogebug
-#twitter_username:   None
-#facebook_username:  None
+twitter_username:   yanshigou
+facebook_username:  yanshigoussss
 #linkedin_username:  firstname-lastname-idxxxx
 
 
