--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ zhihu_username:     yanshigou
 github_username:    yanshigou
 CSDN_username:      dogebug
 twitter_username:   yanshigou
-facebook_username:  yanshigoussss
+facebook_username:  yanshigou
 #linkedin_username:  firstname-lastname-idxxxx
 
 
