--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "狗哥养了一只猫"
+sidebar-about-description: "keep foolish, keep hungry, keep young"
 sidebar-avatar: /img/dzt.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
