--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: yanshigou | Dzt's Blog
-SEOTitle: 董哲彤的博客 | Dzt
+SEOTitle: Dzt's Blog | Dzt
 header-img: img/about-bg.jpg
 email: yanshigou@foxmail.com
 description: "厌世狗的博客 | Python、Django | 这里是厌世狗的个人博客，与你一起发现更大的世界。"
